<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.alpha.intell.factory.check.fragments.GsensorFragment">

    <TextView
        android:id="@+id/detail"
        style="@style/Widget.TextView.Detail"
        android:text="@string/gsensor_detail" />

    <GridLayout
        android:id="@+id/value_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/detail"
        android:layout_below="@id/detail"
        android:layout_marginTop="16dp"
        android:columnCount="2">

        <TextView
            android:id="@+id/x_cord"
            style="@style/Widget.TextView.StyleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_cord" />

        <TextView
            android:id="@+id/x_value"
            style="@style/Widget.TextView.StyleRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="-234234g" />

        <TextView
            android:id="@+id/y_cord"
            style="@style/Widget.TextView.StyleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_cord" />

        <TextView
            android:id="@+id/y_value"
            style="@style/Widget.TextView.StyleRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="-234234g" />

        <TextView
            android:id="@+id/z_cord"
            style="@style/Widget.TextView.StyleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z_cord" />

        <TextView
            android:id="@+id/z_value"
            style="@style/Widget.TextView.StyleRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="-234234g" />
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/detail"
        android:layout_below="@id/value_layout"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttons_list_corner"
        android:columnCount="2"
        android:paddingLeft="10dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/x_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.MyCheckBox.TextView"
                android:text="@string/x_fail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/y_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.MyCheckBox.TextView"
                android:text="@string/y_fail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/z_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.MyCheckBox.TextView"
                android:text="@string/z_fail" />
        </LinearLayout>

    </GridLayout>

</RelativeLayout>
