<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.alpha.intell.factory.check.fragments.DDRFragment">

    <TextView
        android:id="@+id/detail"
        style="@style/Widget.TextView.Detail"
        android:text="@string/ddr_detail" />

    <TextView
        android:id="@+id/tips"
        style="@style/Widget.TextView.StyleB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/detail"
        android:layout_below="@id/detail"
        android:layout_marginTop="44dp"
        android:text="@string/ready_test"/>

    <LinearLayout
        android:id="@+id/check_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/detail"
        android:layout_below="@id/tips"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/Widget.MyCheckBox.TextView"
            android:text="@string/ddr_fail" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.Button.StartTestLong" />
</RelativeLayout>
