<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alpha.smart.factorytest.fragments.HandFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/body" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/check_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="48dp"
            android:layout_marginTop="61dp"
            android:columnCount="2">

            <CheckBox android:id="@+id/left" />

            <TextView android:text="@string/left_hand_fail" />

            <CheckBox android:id="@+id/right" />

            <TextView android:text="@string/right_hand_fail" />
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/check_layout"
            android:layout_marginLeft="219dp"
            android:layout_marginTop="85dp"
            android:text="@string/hand_detail" />

    </RelativeLayout>

</FrameLayout>
