<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.alpha.intell.factory.check.fragments.HeadLightFragment">

    <TextView
        android:id="@+id/detail"
        style="@style/Widget.TextView.Detail"
        android:text="@string/head_light_detail" />

    <GridLayout
        android:id="@+id/check_layout"
        android:layout_width="447dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/detail"
        android:layout_below="@id/detail"
        android:layout_marginTop="37dp"
        android:background="@drawable/buttons_list_corner"
        android:columnCount="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.MyCheckBox.TextView"
                android:text="@string/origin_fail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.MyCheckBox.TextView"
                android:text="@string/red_fail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.MyCheckBox.TextView"
                android:text="@string/green_fail" />
        </LinearLayout>

    </GridLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.Button.StartTestLong" />
</RelativeLayout>
