<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.alpha.intell.factory.check.fragments.MicFragment">

    <TextView
        android:id="@+id/detail"
        style="@style/Widget.TextView.Detail"
        android:text="@string/mic_detail"/>

    <TextView
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail"
        android:layout_alignLeft="@id/detail"
        android:layout_marginTop="43dp"
        style="@style/Widget.TextView.StyleB"
        android:text="@string/ready_rec"/>

    <LinearLayout
        android:id="@+id/check_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tips"
        android:layout_alignLeft="@id/detail"
        android:layout_marginTop="43dp"
        android:orientation="horizontal"
        android:gravity="center">
        <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MyCheckBox.TextView"
            android:text="@string/rec_fail"/>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.Button.StartTestLong"/>

</RelativeLayout>
