<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alpha.smart.factorytest.fragments.SpeakerFragment">

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:text="@string/speaker_detail" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/detail"
        android:layout_below="@id/detail"
        android:text="@string/ready_play" />

    <GridLayout
        android:id="@+id/check_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/detail"
        android:layout_below="@id/note"
        android:columnCount="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="50dp">

            <CheckBox
                android:id="@+id/no_sound_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/check_box"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_sound" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/boom_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/check_box"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/sound_no_change_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/check_box"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_no_change" />
        </LinearLayout>
    </GridLayout>
    <Button
        android:id="@+id/speaker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/start_test_button"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
